--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Stroke Art Fair 2018"/>
+    <meta name="keywords" content="Kanika Kalia, Ui developer, Kanika" >
+    <meta name="description" content="Ui developer">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
+
+    <title>Kanika Kalia- Ui developer</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/solid.css" integrity="sha384-HTDlLIcgXajNzMJv5hiW5s2fwegQng6Hi+fN6t5VAcwO/9qbg2YEANIyKBlqLsiT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/regular.css" integrity="sha384-R7FIq3bpFaYzR4ogOiz75MKHyuVK0iHja8gmH1DHlZSq4tT/78gKAa7nl4PJD7GP" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/brands.css" integrity="sha384-KtmfosZaF4BaDBojD9RXBSrq5pNEO79xGiggBxf8tsX+w2dBRpVW5o0BPto2Rb2F" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+    <style media="screen">
+      @font-face {
+      font-family: 'Entschuldigung-Regular';
+      src:url('https://webfonts.ffonts.net/webfonts/E/N/Entschuldigung-Regular/Entschuldigung-Regular.ttf.woff') format('woff'),
+      }
+      .outer-wrapper{
+        background: #fff;
+        display: table;
+        width: 100%;
+        height: 100vh;
+      }
+      .inner-wrapper{
+        display: table-cell;
+        width: 100%;
+        text-align: center;
+        vertical-align: middle;
+      }
+      h1 span{
+        font-family: 'Entschuldigung-Regular', sans-serif;
+        font-size: 45px;
+        color: #333;
+        font-weight: 600;
+        border: 6px solid #333;
+        padding: 20px;
+        letter-spacing: 6px;
+        margin-bottom: 20px;
+      }
+      a{
+        padding-top: 20px;
+        margin: 20px 10px;
+        font-size: 30px;
+        color: #3b3b3b;
+      }
+    </style>
+  </head>
+
+  <body>
+			<div class="outer-wrapper">
+				<div class="inner-wrapper">
+          <h1><span>Coming Soon</span></h1>
+          <a href="www.linkedin.com/in/kkalia9"><i class="fab fa-linkedin-in"></i></a>
+          <a href="kanikakalia.github.io"><i class="fab fa-github"></i></a>
+          <a href="codepen.io/kkalia9"><i class="fab fa-codepen"></i></a>
+				</div>
+
+			</div>
+  </body>
+</html>
