--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 			<div class="outer-wrapper">
 				<div class="inner-wrapper">
           <h1><span>Coming Soon</span></h1>
-          <a href="www.linkedin.com/in/kkalia9"><i class="fab fa-linkedin-in"></i></a>
-          <a href="kanikakalia.github.io"><i class="fab fa-github"></i></a>
-          <a href="codepen.io/kkalia9"><i class="fab fa-codepen"></i></a>
+          <a href="https://www.linkedin.com/in/kkalia9"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://kanikakalia.github.io"><i class="fab fa-github"></i></a>
+          <a href="https://codepen.io/kkalia9"><i class="fab fa-codepen"></i></a>
 				</div>
 
 			</div>
