--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <a href="https://www.linkedin.com/in/kkalia9"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://github.com/kanikakalia/"><i class="fab fa-github"></i></a>
           <a href="https://codepen.io/kkalia9"><i class="fab fa-codepen"></i></a>
-          <a href="https://github.com/kanikakalia/Kanika_Kalia.pdf"><i class="fab fa-address-card"></i></a>
+          <a href="https://kanikakalia.github.io/Kanika_Kalia.pdf" traget="_blank"><i class="fab fa-address-card"></i></a>
 
 				</div>
 
